--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>BaseLand — 100×100</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
   <link rel="canonical" href="https://baseland.life" />
   <meta property="og:url" content="https://baseland.life" />
   <meta property="og:title" content="BaseLand — 100×100 Pixel Grid on Base" />
@@ -48,6 +48,12 @@
       margin:0; padding:0; height:100%;
       background: var(--bg); color: var(--white);
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      overscroll-behavior: none;
+      -webkit-overflow-scrolling: touch;
+    }
+    html, body, #container, #bg, #grid {
+      touch-action: none;
+      overscroll-behavior: none;
     }
 
     header {
@@ -103,7 +109,13 @@
     button:active { transform: translateY(0); }
     button[disabled] { opacity:.6; cursor:not-allowed; box-shadow:none }
 
-    #container { position: absolute; top:60px; left:0; right:0; bottom:0; overflow:hidden; }
+    #container { 
+      position: absolute; top:60px; left:0; right:0; bottom:0; overflow:hidden;
+      touch-action: none;
+      overscroll-behavior: none;
+      -webkit-user-select: none;
+      user-select: none;
+    }
     #bg {
       position: absolute; inset: 0; width:100vw; height:calc(var(--vh, 1vh) * 100); display:block;
       z-index: 0;
