--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>BaseLand — 100×100</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="canonical" href="https://baseland.life" />
   <meta property="og:url" content="https://baseland.life" />
   <meta property="og:title" content="BaseLand — 100×100 Pixel Grid on Base" />
@@ -12,6 +12,8 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="fc:frame:manifest" content="https://baseland.life/display.json" />
   <meta name="fc:frame" content='{"version":"1","imageUrl":"https://play.rosebud.ai/assets/frame-1200x800.png?bU1I","button":{"title":"Open BaseLand","action":{"type":"launch_frame","url":"https://baseland.life","name":"BaseLand"}}}' />
+
+  <script async src="https://cdn.jsdelivr.net/npm/es-module-shims@1.10.0/dist/es-module-shims.min.js" crossorigin="anonymous"></script>
   <script type="importmap">
     {
       "imports": {
@@ -19,6 +21,7 @@
       }
     }
   </script>
+
   <script>
     (function () {
       try {
@@ -33,6 +36,14 @@
       } catch (e) {}
     })();
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@farcaster/miniapp-sdk/dist/index.umd.min.js"></script>
+  <script>
+    try {
+      (window?.farcaster?.mini?.sdk || window?.farcaster?.sdk || window?.sdk)?.actions?.ready();
+    } catch (e) {}
+  </script>
+
   <style>
     :root {
       --blue: #1652F0;
@@ -48,12 +59,6 @@
       margin:0; padding:0; height:100%;
       background: var(--bg); color: var(--white);
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      overscroll-behavior: none;
-      -webkit-overflow-scrolling: touch;
-    }
-    html, body, #container, #bg, #grid {
-      touch-action: none;
-      overscroll-behavior: none;
     }
 
     header {
@@ -109,13 +114,7 @@
     button:active { transform: translateY(0); }
     button[disabled] { opacity:.6; cursor:not-allowed; box-shadow:none }
 
-    #container { 
-      position: absolute; top:60px; left:0; right:0; bottom:0; overflow:hidden;
-      touch-action: none;
-      overscroll-behavior: none;
-      -webkit-user-select: none;
-      user-select: none;
-    }
+    #container { position: absolute; top:60px; left:0; right:0; bottom:0; overflow:hidden; }
     #bg {
       position: absolute; inset: 0; width:100vw; height:calc(var(--vh, 1vh) * 100); display:block;
       z-index: 0;
@@ -240,6 +239,7 @@
 
     html.miniapp header .left { display: none !important; }
   </style>
+
   <style id="rosebud-preloader-override">
     #rosebud-preloader svg,
     #rosebud-preloader img,
@@ -257,11 +257,7 @@
     [id*="loading-screen"] svg,
     [id*="loading-screen"] img,
     [data-rosebud-preloader] svg,
-    [data-rosebud-preloader] img {
-      display: none !important;
-      visibility: hidden !important;
-      opacity: 0 !important;
-    }
+    [data-rosebud-preloader] img { display: none !important; visibility: hidden !important; opacity: 0 !important; }
     #rosebud-preloader::before,
     .rosebud-loading::before,
     [class*="preloader"]::before,
@@ -270,24 +266,18 @@
     [data-rosebud-preloader]::before {
       content: "" !important;
       position: absolute !important;
-      left: 50% !important;
-      top: 50% !important;
+      left: 50% !important; top: 50% !important;
       transform: translate(-50%, -50%) !important;
-      width: 120px !important;
-      height: 120px !important;
+      width: 120px !important; height: 120px !important;
       background-image: url("https://rosebud.ai/assets/Base_Logo_1.png?WWz6") !important;
-      background-repeat: no-repeat !important;
-      background-position: center !important;
-      background-size: contain !important;
+      background-repeat: no-repeat !important; background-position: center !important; background-size: contain !important;
       z-index: 999999 !important;
       filter: drop-shadow(0 0 20px rgba(22, 82, 240, 0.4)) !important;
       animation: logoGlow 2s ease-in-out infinite !important;
     }
-    @keyframes logoGlow {
-      0%, 100% { filter: drop-shadow(0 0 20px rgba(22, 82, 240, 0.4)); }
-      50% { filter: drop-shadow(0 0 30px rgba(22, 82, 240, 0.6)); }
-    }
+    @keyframes logoGlow { 0%, 100% { filter: drop-shadow(0 0 20px rgba(22, 82, 240, 0.4)); } 50% { filter: drop-shadow(0 0 30px rgba(22, 82, 240, 0.6)); } }
   </style>
+
   <script>
     (function fixIOSVh(){
       function set() {
@@ -324,11 +314,7 @@
 
   <div id="collections-panel"
        aria-hidden="true"
-       style="
-         position: fixed; right: 0; top: 0; height: 100vh; width: 380px; max-width: 92vw;
-         background: #0b0b0b; border-left:1px solid #1a1a1a; color:#fff; z-index: 1100;
-         transform: translateX(100%); transition: transform .25s ease;
-         display: flex; flex-direction: column;">
+       style="position: fixed; right: 0; top: 0; height: 100vh; width: 380px; max-width: 92vw; background: #0b0b0b; border-left:1px solid #1a1a1a; color:#fff; z-index: 1100; transform: translateX(100%); transition: transform .25s ease; display: flex; flex-direction: column;">
     <div style="display:flex; align-items:center; justify-content:space-between; padding:14px 16px; border-bottom:1px solid #1a1a1a;">
       <span style="font-weight:700">My NFTs</span>
       <button id="close-collections" class="ghost" aria-label="Close" style="background:#141414; border:1px solid #222; border-radius:8px; padding:6px 10px;">Close</button>
@@ -355,13 +341,7 @@
 
   <div id="status"></div>
 
-  <audio
-    id="bg-audio"
-    src="https://rosebud.ai/assets/cosmic-ambience.mp3.mp3?tuDD"
-    preload="auto"
-    loop
-    crossorigin="anonymous">
-  </audio>
+  <audio id="bg-audio" src="https://rosebud.ai/assets/cosmic-ambience.mp3.mp3?tuDD" preload="auto" loop crossorigin="anonymous"></audio>
 
   <script type="module" src="./src/main.js"></script>
 </body>
