--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
     #container::before {
       content: "";
       position: absolute; inset: 0;
-      background-image: url("https://rosebud.ai/assets/Base_Logo_1.png?WWz6");
+      background-image: url("https://rosebud.ai/assets/test-bg.png?xjBe");
       background-repeat: no-repeat;
       background-position: center;
       background-size: min(70vmin, 720px);
-      opacity: 0.12;
+      opacity: 0.25;
       pointer-events: none;
       z-index: -1;
       filter:
