--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <audio id="bg-audio" src="https://rosebud.ai/assets/cosmic-ambience.mp3.mp3?tuDD" preload="auto" loop crossorigin="anonymous"></audio>
 
   <!-- Ana uygulama -->
-  <script type="module" src="./src/main.js"></script>
+ <script type="module" src="src/main.js"></script>
 
   <!-- (İsteğe bağlı) mini-ready sinyali — module üzerinden -->
   <script type="module">
